# hw_simulator

./: Cargo.toml  README.md  client.py  tcp_client.py
embassy-net-0.7.0/: .cargo_vcs_info.json  Cargo.toml
embassy-net-0.7.0/src/: lib.rs
smoltcp-0.12.0/src/iface/interface/: ethernet.rs  ipv4.rs  mod.rs
src/: main.rs
